[gd_scene load_steps=21 format=3 uid="uid://c3jnjjc5rwikg"]

[ext_resource type="Texture2D" uid="uid://cu4hvfusbokkj" path="res://assets/sprites/characters/npcs/hubnerCharacter.png" id="1_vxhxr"]
[ext_resource type="Script" uid="uid://b8c5yiud3v4rw" path="res://scripts/hubnerNpcData.gd" id="4_4seds"]
[ext_resource type="PackedScene" uid="uid://v58rm88kq60w" path="res://scenes/tasks.tscn" id="6_s4jau"]
[ext_resource type="Script" uid="uid://fgdo85xswlpn" path="res://scripts/npcMovement.gd" id="7_b0o0l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1f4j7"]
size = Vector2(10, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfuqg"]
atlas = ExtResource("1_vxhxr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bu5ue"]
atlas = ExtResource("1_vxhxr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nbls"]
atlas = ExtResource("1_vxhxr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o53cn"]
atlas = ExtResource("1_vxhxr")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kqin"]
atlas = ExtResource("1_vxhxr")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ql2h0"]
atlas = ExtResource("1_vxhxr")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha018"]
atlas = ExtResource("1_vxhxr")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lca5v"]
atlas = ExtResource("1_vxhxr")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4s44"]
atlas = ExtResource("1_vxhxr")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_77rhp"]
atlas = ExtResource("1_vxhxr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wh4t"]
atlas = ExtResource("1_vxhxr")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kw5tx"]
atlas = ExtResource("1_vxhxr")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwndf"]
atlas = ExtResource("1_vxhxr")
region = Rect2(64, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_autnx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfuqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bu5ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nbls")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o53cn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kqin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ql2h0")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha018")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lca5v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4s44")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_77rhp")
}],
"loop": true,
"name": &"stop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wh4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kw5tx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwndf")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gg0x4"]
radius = 20.0

[node name="HubnerNpc" type="CharacterBody2D" groups=["NPC"]]
light_mask = 4
visibility_layer = 3
z_index = 2
y_sort_enabled = true
collision_layer = 4
collision_mask = 3
script = ExtResource("7_b0o0l")

[node name="NpcColision" type="CollisionShape2D" parent="."]
light_mask = 4
visibility_layer = 3
y_sort_enabled = true
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_1f4j7")

[node name="Animated" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -13)
sprite_frames = SubResource("SpriteFrames_autnx")
animation = &"up"

[node name="ChatDetector" type="Area2D" parent="."]

[node name="ChatColision" type="CollisionShape2D" parent="ChatDetector"]
light_mask = 4
visibility_layer = 3
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_gg0x4")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Tasks" parent="." instance=ExtResource("6_s4jau")]
visible = false

[node name="NpcData" type="Node" parent="."]
script = ExtResource("4_4seds")

[connection signal="body_entered" from="ChatDetector" to="." method="_on_chat_detector_body_entered"]
[connection signal="body_exited" from="ChatDetector" to="." method="_on_chat_detector_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
